[package]
name         = "oxidized-nbt"
version      = "0.1.0"
edition      = "2024"
authors      = ["Dogukan Metan <dogukanmetan@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/oxidized-mc/nbt"
homepage     = "https://github.com/oxidized-mc/nbt"
rust-version = "1.85"
readme       = "README.md"
documentation = "https://docs.rs/oxidized-nbt"
description  = "Complete Minecraft NBT codec — binary reader/writer, SNBT parser, serde integration, gzip/zlib I/O, memory accounting"
keywords     = ["minecraft", "oxidized-mc"]
categories   = ["game-development"]

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror  = "2"
flate2     = "1"
bytes      = "1"
indexmap    = { version = "2", features = ["serde"] }

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
proptest   = "1"
insta      = { version = "1", features = ["toml"] }
criterion  = { version = "0.8", features = ["html_reports"] }

[[bench]]
name    = "nbt_benchmarks"
harness = false

[profile.dev]
opt-level = 1

[profile.bench]
inherits  = "release"
debug     = true

[lints.rust]
missing_docs   = "warn"
unsafe_code    = "deny"
unused_imports = "warn"

[lints.clippy]
# Correctness — hard errors
correctness                = { level = "deny", priority = -1 }
# Performance and style — warnings
perf                       = { level = "warn", priority = -1 }
style                      = { level = "warn", priority = -1 }
complexity                 = { level = "warn", priority = -1 }
suspicious                 = { level = "warn", priority = -1 }
# Specific useful lints
unwrap_used                = "deny"
expect_used                = "deny"
panic                      = "deny"
print_stdout               = "deny"
print_stderr               = "deny"
needless_pass_by_value     = "warn"
redundant_clone            = "warn"
# Noisy lints intentionally suppressed
module_name_repetitions    = "allow"
must_use_candidate         = "allow"
cast_possible_truncation   = "allow"
cast_sign_loss             = "allow"
cast_possible_wrap         = "allow"
